--- a/GRUPO2-GTICS/src/main/resources/application.properties
+++ b/GRUPO2-GTICS/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8084
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+logging.level.root.=ERROR
+spring.cloud.gcp.sql.instance-connection-name=dulcet-doodad-405920:us-east1:root
